feat(ai,backend,frontend,admin,openapi,tests,i18n): 添加管理员 AI 诊断接口与前端诊断面板
- 后端：新增 /admin/ai/diagnostics 路由与 AdminAiController::diagnostics 接口
- 服务：实现 AdminAiIntentService::getDiagnostics，支持可选的实时连通性检测并返回 client/config/commands/connectivity 信息
- OpenAPI：补充 AdminAiDiagnosticsResponse schema 到 openapi.json
- 测试：为控制器与服务添加诊断相关单元测试（成功/失败/未配置场景）
- 前端：新增管理员 AI 诊断页面、路由与导航项，增加对应翻译（en/zh）并在 admin API 客户端添加 getAiDiagnostics
- UX：在前端实现刷新与连通性检测交互、状态展示与错误提示

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -863,7 +863,8 @@
       "avatars": "Avatars",
       "exchanges": "Exchanges",
       "broadcast": "Broadcast Center",
-      "systemLogs": "System Logs"
+      "systemLogs": "System Logs",
+      "diagnostics": "AI Diagnostics"
     },
     "tabs": {
       "dashboard": "Dashboard",
@@ -876,6 +877,76 @@
       "avatars": "Avatars",
       "audit": "Audit logs",
       "systemLogs": "System logs"
+    },
+    "diagnostics": {
+      "title": "AI Diagnostics",
+      "description": "Inspect AI assistant configuration, client status, and run live connectivity tests.",
+      "actions": {
+        "refresh": "Refresh status",
+        "refreshing": "Refreshing diagnostics...",
+        "check": "Run connectivity check",
+        "checking": "Checking connectivity..."
+      },
+      "labels": {
+        "enabled": "AI assistant enabled",
+        "disabled": "AI assistant disabled",
+        "yes": "Yes",
+        "no": "No",
+        "lastUpdated": "Last updated {{value}}",
+        "never": "Never"
+      },
+      "status": {
+        "disabledTitle": "Assistant disabled",
+        "disabledDescription": "Provide a valid LLM API key and configuration on the server to enable the assistant."
+      },
+      "connectivity": {
+        "title": "Connectivity status",
+        "status": {
+          "ok": "Connection successful",
+          "error": "Connection failed",
+          "skipped": "Skipped",
+          "not_checked": "Not checked"
+        },
+        "description": {
+          "ok": "The AI provider responded successfully.",
+          "error": "Connectivity test failed. Review the error details below.",
+          "skipped": "Connectivity check skipped because the assistant is disabled.",
+          "not_checked": "Run a connectivity check to verify access to the AI provider."
+        },
+        "fields": {
+          "model": "Model",
+          "finishReason": "Finish reason",
+          "usage": "Usage",
+          "error": "Error message",
+          "exception": "Exception",
+          "reason": "Reason"
+        }
+      },
+      "configuration": {
+        "title": "Model configuration",
+        "description": "Current runtime settings for the assistant model.",
+        "model": "Model",
+        "temperature": "Temperature",
+        "maxTokens": "Max tokens"
+      },
+      "client": {
+        "title": "Client adapter",
+        "description": "Underlying HTTP client and adapter details.",
+        "available": "Client available",
+        "class": "Adapter class"
+      },
+      "commands": {
+        "title": "Command catalog",
+        "description": "Number of registered targets and automation actions.",
+        "navigation": "Navigation targets",
+        "quick": "Quick actions",
+        "management": "Management actions"
+      },
+      "messages": {
+        "refreshSuccess": "Diagnostics updated",
+        "checkSuccess": "Connectivity check finished",
+        "checkFailed": "Connectivity check failed: {{message}}"
+      }
     },
     "broadcast": {
       "title": "Broadcast Center",
