--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -240,6 +240,44 @@
     "password": "密码",
     "confirmPassword": "确认密码",
     "school": "学校",
+    "schoolSectionTitle": "学校信息",
+    "schoolEditDescription": "选择已有学校或直接输入新的学校名称，提交并通过验证后会自动保存到目录。",
+    "schoolCurrentLabel": "当前：",
+    "schoolUnset": "未设置",
+    "schoolSearchPlaceholder": "搜索学校或输入新的名称",
+    "schoolInputHint": "建议优先选择列表中的学校以保证数据一致，也可以输入新的学校名称，我们会在验证后创建。",
+    "schoolSuggestions": "推荐学校",
+    "loadingSchools": "正在加载学校...",
+    "clearSelection": "清除选择",
+    "selected": "已选择",
+    "schoolNoResults": "没有匹配的学校，可在上方输入新的名称。",
+    "turnstileNotice": "为防止机器人滥用，提交前需要完成验证。",
+    "saveSchool": "保存学校",
+    "resetSchool": "重置",
+    "schoolNoChanges": "暂无需要保存的更改",
+    "schoolUpdateSuccess": "学校信息更新成功",
+    "schoolUpdateFailed": "学校信息更新失败",
+    "schoolCreatePending": "已提交新的学校条目，验证通过后将被创建。",
+    "schoolCreateSuccess": "新学校已创建并与您的账户关联。",
+    "schoolCreateFailed": "创建新学校失败，请稍后再试。",
+    "schoolPendingApproval": "学校已提交，正在等待审核，可能需要最多 24 小时。",
+    "schoolSectionTitle": "学校信息",
+    "schoolEditDescription": "选择已有学校或直接输入新的学校名称，提交并通过验证后会自动保存到目录。",
+    "schoolCurrentLabel": "当前学校：",
+    "schoolUnset": "未填写",
+    "schoolSearchPlaceholder": "搜索学校或输入新的名称",
+    "schoolInputHint": "建议优先选择列表中的学校以保证数据一致，也可以输入新的学校名称，我们会在验证后创建。",
+    "schoolSuggestions": "推荐学校",
+    "clearSelection": "清除选择",
+    "loadingSchools": "正在加载学校...",
+    "selected": "已选择",
+    "schoolNoResults": "没有匹配的学校，可在上方输入新的名称。",
+    "turnstileNotice": "为防止机器人滥用，提交前需要完成验证。",
+    "saveSchool": "保存学校",
+    "resetSchool": "重置",
+    "schoolNoChanges": "暂无需要保存的更改",
+    "schoolUpdateSuccess": "学校信息更新成功",
+    "schoolUpdateFailed": "学校信息更新失败",
     "usernamePlaceholder": "请输入用户名",
     "emailPlaceholder": "请输入邮箱地址",
     "passwordPlaceholder": "请输入密码",
@@ -792,6 +830,27 @@
     "username": "用户名",
     "email": "邮箱",
     "school": "学校",
+    "schoolSectionTitle": "学校信息",
+    "schoolEditDescription": "选择已有学校或直接输入新的学校名称，提交并通过验证后会自动保存到目录。",
+    "schoolCurrentLabel": "当前学校：",
+    "schoolUnset": "未填写",
+    "schoolSearchPlaceholder": "搜索学校或输入新的名称",
+    "schoolInputHint": "建议优先选择列表中的学校以保证数据一致，也可以输入新的学校名称，我们会在验证后创建。",
+    "schoolSuggestions": "推荐学校",
+    "clearSelection": "清除选择",
+    "loadingSchools": "正在加载学校...",
+    "selected": "已选择",
+    "schoolNoResults": "没有匹配的学校，可在上方输入新的名称。",
+    "turnstileNotice": "为防止机器人滥用，提交前需要完成验证。",
+    "saveSchool": "保存学校",
+    "resetSchool": "重置",
+    "schoolNoChanges": "暂无需要保存的更改",
+    "schoolUpdateSuccess": "学校信息更新成功",
+    "schoolUpdateFailed": "学校信息更新失败",
+    "schoolCreatePending": "已提交新的学校条目，验证通过后将被创建。",
+    "schoolCreateSuccess": "新学校已创建并与您的账户关联。",
+    "schoolCreateFailed": "创建新学校失败，请稍后再试。",
+    "schoolPendingApproval": "学校已提交，正在等待审核，可能需要最多 24 小时。",
     "location": "所在地",
     "joinDate": "加入时间",
     "lastLogin": "最后登录",
@@ -814,7 +873,7 @@
     "avatarUpdateSuccess": "头像更新成功",
     "avatarUpdateFailed": "更新头像失败",
     "avatarLoadError": "加载头像失败",
-    "editInfoHint": "如需修改学校等资料，请联系管理员或重新完成入门流程。",
+    "editInfoHint": "想要更新学校？请在下方完成编辑并通过验证，我们会自动保存新的选择。",
     "form": {
       "personalInfo": "个人信息",
       "contactInfo": "联系信息",
@@ -948,6 +1007,46 @@
         "in": "位置",
         "required": "必填",
         "type": "类型"
+      },
+      "tester": {
+        "title": "接口即时诊断",
+        "description": "即时发起请求，检查接口状态码与返回体。",
+        "actions": {
+          "open": "展开诊断面板",
+          "close": "收起诊断面板",
+          "send": "发送请求",
+          "reset": "重置字段",
+          "sending": "正在发送请求..."
+        },
+        "fields": {
+          "baseUrl": "基础 URL",
+          "resolvedPath": "解析后的路径",
+          "finalUrl": "最终请求地址",
+          "pathParams": "路径参数",
+          "query": "查询参数（JSON 对象）",
+          "headers": "请求头（JSON 对象）",
+          "body": "请求体（JSON）",
+          "auth": "自动携带鉴权 Token",
+          "authDescription": "若浏览器本地存有 Bearer Token 将自动附加。"
+        },
+        "placeholders": {
+          "query": "{\"status\":\"pending\"}",
+          "headers": "{\"X-Debug\":true}",
+          "body": "{\n  \"example\": true\n}"
+        },
+        "messages": {
+          "pathParam": "路径参数 {{name}}",
+          "pathParamRequired": "请填写必填路径参数“{{name}}”。",
+          "bodyNotAllowed": "该 HTTP 方法不支持请求体。",
+          "requestFailed": "请求失败",
+          "duration": "耗时 {{value}} 毫秒",
+          "invalidJsonObject": "{{field}} 必须是合法的 JSON 对象。",
+          "invalidJsonValue": "{{field}} 必须是合法的 JSON 内容。"
+        },
+        "results": {
+          "headers": "响应头信息",
+          "body": "响应正文"
+        }
       }
     },
     "broadcast": {
@@ -1988,6 +2087,27 @@
       "placeholder": "快速跳转或执行操作",
       "noResults": "没有匹配的结果",
       "hint": "提示：直接在上方输入自然语言命令，AI 会结合当前页面给出建议。",
+      "aiHint": "按 Enter 或点击发送，让 AI 帮你导航或执行操作",
+      "aiSending": "AI 正在解析…",
+      "send": "发送指令",
+      "aiConversation": "AI 对话",
+      "aiEmptyState": "还没有对话，试着描述你想做的事情吧。",
+      "aiLoading": "AI 正在分析指令...",
+      "aiLabel": "助手",
+      "userLabel": "你",
+      "aiErrorCode": "错误代码",
+      "aiSuggestionFallback": "智能建议",
+      "aiTokens": "Tokens",
+      "aiAlternativeFallback": "可选方案",
+      "aiTapToRun": "点击执行此操作",
+      "aiTapQuick": "点击执行快捷操作",
+      "aiTapToOpen": "点击前往该位置",
+      "aiMissingRoute": "未找到目标跳转页面",
+      "aiMissingInfo": "请补充必要信息后再试",
+      "aiMissingPath": "缺少要执行的接口地址",
+      "aiActionSuccess": "指令已执行",
+      "aiActionFailed": "指令执行失败",
+      "aiNoMatch": "暂时无法理解该指令",
       "navigation": "界面导航",
       "quickActions": "快捷操作",
       "searchUsers": "搜索用户",
