feat(frontend,i18n): 美化 404 页面并添加中英文本地化文案
- 更新 NotFoundPage 组件：改进布局、加入表情、添加刷新按钮和返回首页按钮
- 在 frontend/public/locales/zh/common.json 与 en/common.json 中添加 notFoundPage 翻译条目

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -2367,6 +2367,14 @@
     "tooManyFiles": "Too many files selected (maximum {{max}})",
     "singleFileOnly": "Only single file uploads are supported"
   },
+  "notFoundPage": {
+    "code": "404",
+    "emoji": "🤔",
+    "message": "Sorry about that! Something went wrong.",
+    "submessage": "We’re making it right. Try refreshing or come back later.",
+    "refresh": "Refresh",
+    "home": "Go to Home"
+  },
   "success": {
     "login": "Login successful",
     "register": "Registration successful",
