--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -2227,6 +2227,14 @@
     "tooManyFiles": "选择的文件过多（最多 {{max}} 个）",
     "singleFileOnly": "仅支持上传单个文件"
   },
+  "notFoundPage": {
+    "code": "404",
+    "emoji": "🤔",
+    "message": "很抱歉！出错了，但我们做对了。",
+    "submessage": "请尝试刷新或稍后返回",
+    "refresh": "刷新",
+    "home": "返回首页"
+  },
   "success": {
     "login": "登录成功",
     "register": "注册成功",
